@@ -7,9 +7,11 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.dal.dao.*;
 import ru.yandex.practicum.filmorate.dto.FilmDto;
+import ru.yandex.practicum.filmorate.dto.GenreDto;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.mapper.FilmMapper;
+import ru.yandex.practicum.filmorate.mapper.GenreMapper;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.Genre;
 import ru.yandex.practicum.filmorate.model.User;
@@ -137,17 +139,38 @@ public class FilmServiceImpl implements FilmService {
     }
 
     @Override
-    public Collection<FilmDto> getTopPopularFilms(int count) {
-        Comparator<FilmDto> byLikes = Comparator.comparingInt(f -> f.getUserLikes().size());
+    public Collection<FilmDto> getPopularFilms(Integer count, Integer genreId, Integer year) {
+        Collection<Film> topPopularFilms = filmStorage.findAll();
 
-        Collection<FilmDto> topPopularFilms = filmStorage.findAll().stream()
+        if (count == null) {
+            count = topPopularFilms.size();
+        }
+
+        Collection<FilmDto> topPopularFilmsDto = topPopularFilms.stream()
                 .map(FilmMapper::modelToDto)
-                .sorted(byLikes.reversed())
+                .filter(filmDto -> {
+                    if (year == null) {
+                        return true;
+                    } else {
+                        return filmDto.getReleaseDate().getYear() == year;
+                    }
+                })
+                .filter(filmDto -> {
+                    if (genreId == null) {
+                        return true;
+                    } else {
+                        GenreMapper genreMapper = null;
+                        GenreDto currentGenreDto = genreMapper.modelToDto(genreStorage.findGenreById(genreId).get());
+                        return filmDto.getGenres().contains(currentGenreDto);
+                    }
+                })
+                .sorted((f1, f2) -> Long.compare(f2.getUserLikes().size(), f1.getUserLikes().size()))
                 .limit(count)
-                .collect(Collectors.toList());
-
+                .toList();
         log.debug(TOP_FILMS_MSG, count, topPopularFilms);
-        return topPopularFilms;
+
+        return topPopularFilmsDto;
+
     }
 
     @Override
@@ -161,7 +184,7 @@ public class FilmServiceImpl implements FilmService {
                 .map(FilmMapper::modelToDto)
                 .sorted((f1, f2) -> Long.compare(f2.getUserLikes().size(), f1.getUserLikes().size()))
                 .collect(Collectors.toList());
-        log.debug(COMMON_FILMS_MSG,userId, friendId, commonFilms);
+        log.debug(COMMON_FILMS_MSG, userId, friendId, commonFilms);
         return commonFilms;
     }
 
@@ -177,13 +200,13 @@ public class FilmServiceImpl implements FilmService {
                         .sorted(byLikes.reversed())
                         .toList();
                 break;
-                case "year":
-                    Comparator<FilmDto> byDate = Comparator.comparing(FilmDto::getReleaseDate);
-                    listFilms = filmStorage.listFilmsDirector(directorId).stream()
-                            .map(FilmMapper::modelToDto)
-                            .sorted(byDate)
-                            .toList();
-                    break;
+            case "year":
+                Comparator<FilmDto> byDate = Comparator.comparing(FilmDto::getReleaseDate);
+                listFilms = filmStorage.listFilmsDirector(directorId).stream()
+                        .map(FilmMapper::modelToDto)
+                        .sorted(byDate)
+                        .toList();
+                break;
             default:
                 throw new ValidationException(new StringBuilder("неверный параметр сортировки"));
         }
